--- a/less/index.less
+++ b/less/index.less
@@ -3,7 +3,7 @@
 @import './base.less';
 
 /* 头部区域样式 */
-#header{
+#header {
     position: fixed;
     /* 定位了会脱标不会有默认100%宽度由内容撑开 */
     /* 如果要100%要手动添加 */
@@ -11,100 +11,304 @@
     top: 0;
     left: 0;
     display: flex;
-    /* background-color:red; */
-}
-#header .left{
-    width: 80px;
-    height: 40px;
-    display: flex;
-    /* 使用伸缩布局让内容居中 */
-    /* 主轴居中 默认主轴X轴 */
-    justify-content: center;
-    /* 侧轴居中 Y轴 */
-    align-items: center;
-}
-#header .left a{
-    /* 京东图片是精灵图使用背景图的方式引入 */
-    /* 在CSS里面引入图片相对路径相对当前的CSS文件 */
-    background-image: url("../images/sprites.png");
-    /* 因为所有图片都是2倍图 背景图也不例外也要缩小1半 */
-    /* 设置背景图大小 */
-    background-size: 200px 200px;
-    /* 背景图定位也要改 */
-    background-position: 0 -110px;
-    width: 58px;
-    height: 21px;
-    display: block;
-    
-}
-#header .center {
-    flex: 1;
-    display: flex;
-    /* 让表单 侧轴Y轴居中 */
-    align-items: center;
-}
-#header .center form {
-    width: 100%;
-    position: relative;
-}
-/* 设置form表单里面的图标样式 */
-#header .center form i{
-    width: 21px;
-    height: 21px;
-    /* 精灵图也是2倍也要缩小 */
-    background-image: url(../images/sprites.png);
-    background-size: 200px 200px;
-    background-position: -58px -110px;
-    position: absolute;
-    left: 5px;
-    top: 6px;
-}
-#header .center form input{
-    width: 100%;
-    height: 30px;
-    /* 圆角只要高度的一半 */
-    border-radius: 15px;
-    /* 设置间距让文字挤到右边不和定位图标重叠 */
-    padding-left: 30px;
+    z-index: 2;
+
+    .left {
+        width: 0.8rem;
+        height: 0.4rem;
+        display: flex;
+        /* 使用伸缩布局让内容居中 */
+        /* 主轴居中 默认主轴X轴 */
+        justify-content: center;
+        /* 侧轴居中 Y轴 */
+        align-items: center;
+
+        a {
+            /* 京东图片是精灵图使用背景图的方式引入 */
+            /* 在CSS里面引入图片相对路径相对当前的CSS文件 */
+            background-image: url("../images/sprites.png");
+            /* 因为所有图片都是2倍图 背景图也不例外也要缩小1半 */
+            /* 设置背景图大小 */
+            background-size: 2rem 2rem;
+            /* 背景图定位也要改 */
+            background-position: 0 -1.1rem;
+            width: 0.58rem;
+            height: 0.21rem;
+            display: block;
+        }
+    }
+
+    .center {
+        flex: 1;
+        display: flex;
+        /* 让表单 侧轴Y轴居中 */
+        align-items: center;
+
+        form {
+            width: 100%;
+            position: relative;
+
+            i {
+                width: 0.21rem;
+                height: 0.21rem;
+                /* 精灵图也是2倍也要缩小 */
+                background-image: url(../images/sprites.png);
+                background-size: 2rem 2rem;
+                background-position: -0.58rem -1.1rem;
+                position: absolute;
+                left: 0.05rem;
+                top: 0.06rem;                
+            }
+
+            input {
+                width: 100%;
+                height: 0.3rem;                
+                /* 圆角只要高度的一半 */
+                border-radius: 0.15rem;
+                /* 设置间距让文字挤到右边不和定位图标重叠 */
+                padding-left: 0.3rem;
+                font-size: 0.14rem;
+            }
+        }
+    }
+
+    .right {
+        width: 0.5rem;
+        height: 0.4rem;
+
+        a {
+            display: block;
+            color: #fff;
+            text-align: center;
+            line-height: 0.4rem;
+        }
+    }
 }
 
-#header .right {
-    width: 50px;
-    height: 40px;
-}
-#header .right a{
-    display: block;
-    color:#fff;
-    text-align: center;
-    line-height: 40px;
-}
 /* 轮播图样式 */
-#slide img{
-    width: 100%;
+#slide {
+    img {
+        width: 100%;
+    }
+
+    // swiper小圆点被选中的样式 修改成白色
+    .swiper-pagination-bullet-active {
+        background-color: #fff;
+    }
 }
 
 /* 导航区域样式 */
-#nav ul{
-    display: flex;
-    /* 设置flex支持换行 */
-    flex-wrap: wrap;
-    
+
+#nav {
+    ul {
+        display: flex;
+        /* 设置flex支持换行 */
+        flex-wrap: wrap;
+
+        li {
+            /* flex: 1; */
+            width: 25%;
+
+            a {
+                display: flex;
+                /* 默认flex 是X 会唉在一行 使用垂直方向 用2行显示 */
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding: 0.05rem 0;
+
+                img {
+                    width: 0.4rem;
+                }
+
+                p {
+                    margin-top: 0.05rem;
+                }
+            }
+        }
+    }
 }
-#nav ul li{
-    /* flex: 1; */
-    width: 25%;
+
+/* 主体商品的样式 */
+#main {
+    background-color: #ccc;
+    /* 父子元素的间距使用padding */
+    // padding: 0 0.1rem;
+    // 如果不想使用margin 防止塌陷可以使用padding
+    padding: 0.1rem;
+    // 解决margin塌陷问题
+    // overflow: hidden;
+    border: 0.01rem solid transparent;
+    // 把商品底部内容往上挤 要60本身底部有10+50就是60
+    padding-bottom: 0.6rem;
+
+    // 让自身main和底部的距离
+    // margin-bottom: 0.5rem;
+    .seckill {
+        /* 兄弟之间的使用margin  但是第一个元素上面没有兄弟 参照父元素就会塌陷*/
+        // margin-top: 0.1rem;
+        background-color: #fff;
+
+        .title {
+            display: flex;
+            // 两端对齐 让left 和 right 居左和居右
+            justify-content: space-between;
+            line-height: 0.3rem;
+
+            .left {
+                display: flex;
+
+                .seckill-icon {
+                    width: 0.2rem;
+                    height: 0.25rem;
+                    margin-left: 0.05rem;
+                }
+
+                .seckill-name {
+                    margin-left: 0.05rem;
+                    /* 使用jd主体色变量 */
+                    color: @main-color;
+                }
+
+                .seckill-downtime {
+                    margin-left: 0.05rem;
+
+                    // :not 排除伪类 把你要排除元素选择器放在括号里面
+                    span:not(:nth-child(3n)) {
+                        display: inline-block;
+                        width: 0.15rem;
+                        height: 0.15rem;
+                        line-height: 0.15rem;
+                        text-align: center;
+                        background-color: #000;
+                        color: #fff;
+                    }
+                }
+            }
+
+            .right {
+                .seckill-more {
+                    margin-right: 0.1rem;
+                }
+            }
+        }
+
+        .content {
+            ul {
+                display: flex;
+
+                li {
+                    flex: 1;
+
+                    a {
+                        display: block;
+                        text-align: center;
+
+                        img {
+                            width: 1.1rem;
+                            height: 1.1rem;
+                        }
+
+                        p {
+                            text-align: center;
+                            color: @main-color;
+                            font-size: 0.12rem;
+
+                            del {
+                                color: #ccc;
+                            }
+                        }
+                    }
+                }
+
+                // li:nth-child(n+2){
+                // li:not(:first-child){
+                // ~表示相邻后面的所有兄弟 而且满足后面这个选择器 第一li后面所有兄弟li
+                li~li {
+                    border-left: 0.01rem solid #ccc;
+                }
+            }
+        }
+    }
+
+    .market {
+        background-color: #fff;
+        margin-top: 0.1rem;
+
+        .title {
+            border-bottom: 0.01rem solid #ccc;
+
+            >h4 {
+                line-height: 0.3rem;
+                padding-left: 0.3rem;
+                font-weight: normal;
+                position: relative;
+            }
+
+            h4::before {
+                content: '';
+                position: absolute;
+                width: 0.04rem;
+                height: 0.14rem;
+                left: 0.2rem;
+                top: 0.07rem;
+                background-color: @main-color;
+            }
+        }
+
+        .content {
+            display: flex;
+
+            .left {
+                width: 50%;
+
+                a {
+                    display: block;
+
+                    img {
+                        width: 100%;
+                    }
+                }
+            }
+
+            .right {
+                width: 50%;
+
+                a {
+                    display: block;
+
+                    img {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
 }
-#nav ul li a{
-    display: flex;
-    /* 默认flex 是X 会唉在一行 使用垂直方向 用2行显示 */
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 0;
-}
-#nav ul li a img{
-    width: 40px;
-}
-#nav ul li a p{
-    margin-top: 5px;
+
+/* 底部区域的样式 */
+#footer {
+    position: fixed;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+
+    ul {
+        display: flex;
+
+        li {
+            width: 25%;
+
+            a {
+                display: block;
+                text-align: center;
+
+                img {
+                    width: 0.65rem;
+                    height: 0.5rem;
+                }
+            }
+        }
+    }
 }
